cabal-version:       2.4
name:                uncertain-gantt
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See README.md for more details.
license:             NONE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2021 Gustavo Bicalho
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     UncertainGantt
  other-modules:       UncertainGantt.Gantt
                     , UncertainGantt.Project
                     , UncertainGantt.Script.Runner
                     , UncertainGantt.Script.Parser
                     , UncertainGantt.Simulator
                     , UncertainGantt.Task
  build-depends:       monad-bayes, containers, transformers, mtl, megaparsec

executable uncertain-gantt
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       uncertain-gantt
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite uncertain-gantt-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       uncertain-gantt
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
